login page frontend designed

--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,30 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+@import "https://fonts.googleapis.com/css2?family=Manrope:wght@400;600;700;800&display=swap";
+
+:root {
+  --color-brand--1: #344f64;
+  --color-brand--2: #d2b174;
+
+  --color-light--1: #f3f1ec;
+  --color-light--2: #c2c1bd;
+  --color-light--3: #92918e;
+
+  --color-dark--1: #61605e;
+  --color-dark--2: #31302f;
+  --color-dark--3: #181818;
+  --color-dark--4: #2b3740;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
+
+body {
+  font-family: "Manrope", sans-serif;
+  color: var(--color-dark--1);
+  font-weight: 400;
+  height: 100vh;
+}
+
+
