designed Post and PostCommentSection + implemented likes on posts

--- a/src/components/LoginPanels/MarketingPanel.module.css
+++ b/src/components/LoginPanels/MarketingPanel.module.css
@@ -5,7 +5,7 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  background-image: url("../assets/marketing-background.png");
+  background-image: url("../../assets/marketing-background.png");
   background-size: cover;
   background-position: center;
   background-color: var(--color-dark--4);
