--- a/src/components/Post/Comment.module.css
+++ b/src/components/Post/Comment.module.css
@@ -1,3 +1,9 @@
+.comment-container{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
 .comment{
     margin-top: var(--space-sm);
     display: flex;
@@ -29,3 +35,16 @@
     color: var(--color-dark--2);
     font-size: larger;
 }
+
+.delete-btn {
+  background: none;
+  border: none;
+  color: var(--color-light--2);
+  cursor: pointer;
+  font-size: 1.2rem;
+}
+
+.delete-btn:hover {
+  color: var(--color-brand--1);
+}
+
