designed PremiumHomePanel for an ad of the website's premium version

--- a/src/components/Button.module.css
+++ b/src/components/Button.module.css
@@ -16,4 +16,7 @@
   background-color: #eab657;
 }
 
-
+.non-filled {
+  background-color: transparent;
+  border: 2px solid var(--color-light--1);
+}
