--- a/src/components/HomePanels/ProfileSummaryHomePanel.module.css
+++ b/src/components/HomePanels/ProfileSummaryHomePanel.module.css
@@ -42,7 +42,7 @@
   align-items: center;
   padding: var(--space-lg);
   width: 100%;
-  border-bottom: solid 1px var(--color-light--2);
+  border-bottom: var(--border-style-default);
 }
 
 .stats > p:first-of-type , .profile-position {
@@ -54,7 +54,7 @@
 }
 
 .profile-summary-container > .stats:nth-of-type(2) {
-  border-top: solid 1px var(--color-light--2);
+  border-top: var(--border-style-default);
   margin-top: var(--space-md);
 }
 
