created global PostsContext

--- a/src/components/Post/PostContent.module.css
+++ b/src/components/Post/PostContent.module.css
@@ -1,3 +1,6 @@
 .content {
   color: var(--color-dark--3);
+  font-size: large;
+  margin-top: var(--space-sm);
+  margin-bottom: var(--space-sm);
 }
