--- a/src/components/MessagesPanels/PeoplePanel.module.css
+++ b/src/components/MessagesPanels/PeoplePanel.module.css
@@ -6,7 +6,7 @@
   border-bottom-left-radius: inherit;
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
+  /* justify-content: space-between; */
   padding: var(--space-lg) 0;
 }
 
@@ -16,6 +16,19 @@
   margin-bottom: var(--space-md);
 }
 
+.search {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.search > input {
+  margin: var(--space-sm);
+  padding: var(--space-sm);
+  border-radius: 40px;
+  border: var(--border-style-default);
+  width: 80%;
+}
 
 @media (max-width: 600px) {
   .people-section {
