--- a/src/components/Post/Post.module.css
+++ b/src/components/Post/Post.module.css
@@ -8,6 +8,12 @@
   display: flex;
   flex-direction: column;
   gap: var(--space-md);
+  position: relative;
+}
+
+.post-header{
+  display: flex;
+  justify-content: space-between;
 }
 
 
