implemented post like, comment, and delete comment (connected to the fake database of posts)

--- a/src/components/Post/PostStatus.module.css
+++ b/src/components/Post/PostStatus.module.css
@@ -15,3 +15,12 @@
 .status img {
   width: var(--space-md);
 }
+
+.comment-count{
+  cursor: pointer;
+}
+
+.comment-count:hover{
+  color: var(--color-brand--1);
+  text-decoration: underline;
+}
