--- a/src/components/MessagesPanels/PeoplePanel/ChatSearch.module.css
+++ b/src/components/MessagesPanels/PeoplePanel/ChatSearch.module.css
@@ -5,7 +5,7 @@
 }
 
 .search > input {
-  margin: var(--space-sm);
+  margin: var(--space-xxs);
   padding: var(--space-sm);
   border-radius: 40px;
   border: var(--border-style-default);
