--- a/src/components/LoginPanels/FormPanel.module.css
+++ b/src/components/LoginPanels/FormPanel.module.css
@@ -21,8 +21,9 @@
   width: 50%;
   display: flex;
   flex-direction: column;
-  align-items: stretch;
+  align-items: center;
   gap: 1rem;
+  justify-content: center;
 }
 
 .form-title {
@@ -34,7 +35,7 @@
 .form-options {
   display: flex;
   align-items: center;
-  justify-content: space-between;
+  gap: var(--space-xxl);
   font-size: smaller;
   color: var(--color-dark--1);
 }
@@ -56,5 +57,6 @@
 }
 
 .form-button{
-  width: 100%;
+  width: 60%;
+  border-radius: var(--space-lg);
 }
