--- a/src/components/ui/FormInput.module.css
+++ b/src/components/ui/FormInput.module.css
@@ -2,7 +2,8 @@
   padding: 0.5rem 1rem;
   font-family: inherit;
   border: solid 1px var(--color-light--2);
-  border-radius: 5px;
+  border-radius: var(--space-lg);
   width: 100%;
   box-sizing: border-box;
 }
+
