refactored components to use a reusable component for Panel

--- a/src/components/HomePanels/Suggestions/SuggestionsHomePanel.module.css
+++ b/src/components/HomePanels/Suggestions/SuggestionsHomePanel.module.css
@@ -1,12 +1,7 @@
-.suggestion:last-child {
-  border-bottom: none;
+.suggestion {
+  border-top: var(--border-style-default);
 }
 
 .panel-title {
   padding: var(--space-lg);
-  border-bottom: var(--border-style-default);
-  display: flex;
-  align-items: center;
-  gap: var(--space-sm);
-  color: var(--color-brand--1);
 }
