--- a/src/components/JobsPanels/JobDetailsPanel/JobDetailsPanel.module.css
+++ b/src/components/JobsPanels/JobDetailsPanel/JobDetailsPanel.module.css
@@ -1,4 +1,4 @@
-.chat-section {
+.job-details-section {
   width: 60%;
   height: 100%;
   border: inherit;
@@ -7,29 +7,21 @@
   display: flex;
   flex-direction: column;
   position: relative;
+  padding: var(--space-lg);
+  overflow: auto;
 }
 
 @media (max-width: 600px) {
-  .chat-section {
+  .job-details-section {
     display: none;
   }
-  .show-chat {
+  .show-job {
     display: inline;
     width: 100%;
     border-radius: var(--border-radius-default);
     display: flex;
     flex-direction: column;
     gap: var(--space-xs);
-    /* justify-content: end; */
-    /* padding: var(--space-md); */
   }
-  /* .chat {
-    border-top-left-radius: var(--border-radius-default);
-  } */
-}
 
-@media (min-width: 1000px) {
-  .chat-section {
-    width: 70%;
-  }
 }
