--- a/src/pages/Jobs.module.css
+++ b/src/pages/Jobs.module.css
@@ -6,21 +6,21 @@
   grid-template-rows: auto auto;
   gap: var(--space-xl);
   justify-content: center;
-  align-items: start; 
+  align-items: start;
 }
 
 .left-column {
   display: flex;
   flex-direction: column;
-  gap: var(--space-xl); 
+  gap: var(--space-xl);
 }
 
 .jobs-section {
   align-self: start;
-  height: 1000px;
+  height: fit-content;
 }
 
-@media(max-width: 900px) {
+@media (max-width: 900px) {
   .main {
     grid-template-columns: 1fr;
   }
@@ -32,4 +32,3 @@
     order: 2;
   }
 }
-
