--- a/src/components/JobsPanels/JobDetailsPanel/JobDetailsHeader.module.css
+++ b/src/components/JobsPanels/JobDetailsPanel/JobDetailsHeader.module.css
@@ -20,6 +20,13 @@
   border-bottom: var(--border-style-default);
 }
 
+.apply-btn{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: var(--space-xs);
+}
+
 @media (max-width: 600px) {
   .back-button {
     display: inline;
