--- a/src/components/NavBar/NavBarItemsList.module.css
+++ b/src/components/NavBar/NavBarItemsList.module.css
@@ -1,12 +1,14 @@
 .navbar-list {
   width: 60%;
   display: flex;
-  justify-content: space-evenly;
+  /* justify-content: space-evenly; */
   align-items: center;
   list-style: none;
+  gap: var(--space-xxl);
+  justify-content: end;
 }
 
-@media (max-width: 720px) {
+@media (max-width: 800px) {
   .navbar-list {
     display: none;
   }
