extracted PersonLi and Modal to make them reusable components, and implemented viewing profile's followers and followings

--- a/src/components/HomePanels/Suggestions/Suggestion.module.css
+++ b/src/components/HomePanels/Suggestions/Suggestion.module.css
@@ -1,30 +1,7 @@
-.suggestion {
-  padding: var(--space-lg);
-  display: flex;
-  align-items: center;
-  gap: var(--space-sm);
-}
-
-.icon {
-  height: var(--space-xl);
-  width: var(--space-xl);
-  border-radius: 50%;
-  background-color: var(--color-brand--1);
-}
-
-.info {
-  flex: 1;
-}
-
-.name {
-  font-weight: bold;
-  font-size: smaller;
-}
-
-.position {
-  font-size: small;
-}
-
 .follow-btn {
   margin-left: auto;
+}
+
+.person {
+  padding: var(--space-lg);
 }
