--- a/src/components/ui/Modal.module.css
+++ b/src/components/ui/Modal.module.css
@@ -1,4 +1,4 @@
-/* .modal-overlay {
+.overlay {
   position: fixed;
   top: 0;
   left: 0;
@@ -31,21 +31,4 @@
     opacity: 1;
     transform: translateY(0);
   }
-} */
-
-.textarea {
-  width: 100%;
-  resize: none;
-  padding: 8px;
-  margin-top: 10px;
-  font-size: 14px;
-  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
-}
-
-.buttons {
-  display: flex;
-  justify-content: flex-end;
-  gap: 10px;
-  /* margin-top: 15px; */
-  padding-top: 15px;
 }
