added navigations to users by clicking on their profile icons

--- a/src/components/ui/Panel.module.css
+++ b/src/components/ui/Panel.module.css
@@ -2,9 +2,9 @@
   background-color: white;
   border-radius: var(--border-radius-default);
   border: var(--border-style-default);
-  display: flex; 
-  flex-direction: column;
-  height: fit-content;
+  /* display: flex; 
+  flex-direction: column; */
+  /* height: fit-content; */
   overflow: auto;
 }
 
