--- a/src/pages/Messages.module.css
+++ b/src/pages/Messages.module.css
@@ -1,20 +1,25 @@
 .main {
   background-color: var(--color-light--1);
   padding: var(--space-xl);
+  height: 89vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 
 .messages-page {
-  height: 80vh;
   width: 100%;
   display: flex;
+  height: 80vh;
 }
 
 @media (min-width: 1000px) {
-    .main{
-        display: flex;
-        justify-content: center;
-    }
-    .messages-page{
-        max-width: 80%;
-    }
+  .main {
+    display: flex;
+    justify-content: center;
+  }
+  .messages-page {
+    max-width: 80%;
+  }
 }
