implemented: - notifications using React Toast - useSuggestions to filter suggestions from users and sort by number of mutuals - manual refetching of suggestions list when the page is revisted instead of immediate refetch for better UI

--- a/src/components/ui/List.module.css
+++ b/src/components/ui/List.module.css
@@ -1,3 +1,9 @@
 .list > * + * {
   border-top: var(--border-style-default);
 }
+
+.empty {
+  text-align: center;
+  margin: var(--space-md);
+  margin-bottom: var(--space-xxl);
+}
