--- a/src/components/Post/PostEditOptions.module.css
+++ b/src/components/Post/PostEditOptions.module.css
@@ -23,6 +23,9 @@
 .option {
   padding: var(--space-sm);
   cursor: pointer;
+  display: flex;
+  align-items: center;
+  gap: var(--space-xs)
 }
 
 .option:hover {
